--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -4,73 +4,87 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context=".MainActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <!-- Map Layer (Bottom) -->
+        <include
+            layout="@layout/main_map"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="?attr/actionBarSize" />
+
+        <!-- Top Bar Layer -->
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:theme="@style/AppTheme.AppBarOverlay">
+            android:background="@android:color/transparent"
+            app:elevation="0dp">
 
-            <androidx.appcompat.widget.Toolbar
+            <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:background="@color/colorPrimary"
+                android:background="?attr/colorSurface"
+                app:titleTextColor="?attr/colorOnSurface"
+                app:navigationIconTint="?attr/colorOnSurface"
+                android:theme="@style/ToolbarTheme"
+                app:title="@string/app_name"
                 app:popupTheme="@style/AppTheme.PopupOverlay" />
 
         </com.google.android.material.appbar.AppBarLayout>
 
-        <include
-            layout="@layout/main_map"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="?attr/actionBarSize" />
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/faBtnStart"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_marginEnd="30dp"
-            android:layout_marginBottom="80dp"
-            android:contentDescription="@null"
-            app:elevation="6dp"
-            app:pressedTranslationZ="12dp"
-            app:srcCompat="@drawable/ic_position" />
-
+        <!-- Search Results Layer (Overlay) -->
         <LinearLayout
             android:id="@+id/search_linear"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#ddffffff"
+            android:layout_height="match_parent"
+            android:background="?attr/colorSurface"
             android:visibility="gone"
-            android:layout_marginTop="?attr/actionBarSize">
+            android:orientation="vertical"
+            android:layout_marginTop="?attr/actionBarSize"
+            android:elevation="12dp">
             <ListView
                 android:id="@+id/search_list_view"
                 android:layout_width="match_parent"
-                android:layout_margin="10dp"
-                android:layout_height="wrap_content">
-            </ListView>
+                android:layout_height="match_parent"
+                android:divider="?attr/colorOutlineVariant"
+                android:dividerHeight="0.5dp"/>
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/search_history_linear"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#ddffffff"
+            android:layout_height="match_parent"
+            android:background="?attr/colorSurface"
             android:visibility="gone"
-            android:layout_marginTop="?attr/actionBarSize">
+            android:orientation="vertical"
+            android:layout_marginTop="?attr/actionBarSize"
+            android:elevation="12dp">
             <ListView
                 android:id="@+id/search_history_list_view"
                 android:layout_width="match_parent"
-                android:layout_margin="10dp"
-                android:layout_height="wrap_content">
-            </ListView>
+                android:layout_height="match_parent"
+                android:divider="?attr/colorOutlineVariant"
+                android:dividerHeight="0.5dp"/>
         </LinearLayout>
 
+        <!-- FAB Layer (Top) -->
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/faBtnStart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="48dp"
+            android:contentDescription="@null"
+            style="@style/Widget.Material3.FloatingActionButton.Primary"
+            app:srcCompat="@drawable/ic_position" />
+
     </FrameLayout>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
