--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,42 +1,96 @@
 <resources>
 
-    <!-- 系统主题默认主题. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimary</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="buttonStyle">@style/AppTheme.Button</item>
+    <!-- Base application theme. -->
+    <style name="AppTheme" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Light Theme Attributes (Default) -->
+        <item name="colorPrimary">@color/md_theme_light_primary</item>
+        <item name="colorOnPrimary">@color/md_theme_light_onPrimary</item>
+        <item name="colorPrimaryContainer">@color/md_theme_light_primaryContainer</item>
+        <item name="colorOnPrimaryContainer">@color/md_theme_light_onPrimaryContainer</item>
+        
+        <item name="colorSecondary">@color/md_theme_light_secondary</item>
+        <item name="colorOnSecondary">@color/md_theme_light_onSecondary</item>
+        <item name="colorSecondaryContainer">@color/md_theme_light_secondaryContainer</item>
+        <item name="colorOnSecondaryContainer">@color/md_theme_light_onSecondaryContainer</item>
+        
+        <item name="colorTertiary">@color/md_theme_light_tertiary</item>
+        <item name="colorOnTertiary">@color/md_theme_light_onTertiary</item>
+        <item name="colorTertiaryContainer">@color/md_theme_light_tertiaryContainer</item>
+        <item name="colorOnTertiaryContainer">@color/md_theme_light_onTertiaryContainer</item>
+        
+        <item name="colorError">@color/md_theme_light_error</item>
+        <item name="colorOnError">@color/md_theme_light_onError</item>
+        <item name="colorErrorContainer">@color/md_theme_light_errorContainer</item>
+        <item name="colorOnErrorContainer">@color/md_theme_light_onErrorContainer</item>
+        
+        <item name="android:background">@color/md_theme_light_background</item>
+        <item name="colorOnBackground">@color/md_theme_light_onBackground</item>
+        <item name="colorSurface">@color/md_theme_light_surface</item>
+        <item name="colorOnSurface">@color/md_theme_light_onSurface</item>
+        <item name="colorSurfaceVariant">@color/md_theme_light_surfaceVariant</item>
+        <item name="colorOnSurfaceVariant">@color/md_theme_light_onSurfaceVariant</item>
+        <item name="colorOutline">@color/md_theme_light_outline</item>
+
+        <!-- Inverse Colors for Snackbar -->
+        <item name="colorSurfaceInverse">#303030</item>
+        <item name="colorOnSurfaceInverse">#FFFFFF</item>
+
+        <!-- Global Text Colors -->
+        <item name="android:textColorPrimary">@color/md_theme_light_onSurface</item>
+        <item name="android:textColorSecondary">@color/md_theme_light_onSurfaceVariant</item>
+        <item name="android:textColorTertiary">@color/md_theme_light_onSurfaceVariant</item>
+        <!-- Hint Color (60% opacity onSurface) -->
+        <item name="android:textColorHint">#991D1B20</item>
+
+        <!-- Status Bar Configuration -->
         <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowLightStatusBar">true</item>
+
+        <!-- Preference Support -->
+        <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
+        
+        <!-- Custom Snackbar Style -->
+        <item name="snackbarStyle">@style/Widget.App.Snackbar</item>
     </style>
 
-    <!-- 无ActionBar -->
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.Material3.Dark.ActionBar" />
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.Material3.Light" />
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
-    <!-- 参考 https://blog.csdn.net/qq_37299249/article/details/78536772 -->
-    <style name="RippleWhite"  parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- 点击后波纹的颜色 -->
-        <item name="android:colorControlHighlight">#C8C9CA</item>
-        <!-- 效果半径-->
-        <item name="android:radius">14dp</item>
+    <!-- Button Style Override -->
+    <style name="AppTheme.Button" parent="Widget.Material3.Button">
     </style>
 
-    <!-- dialog动画 -->
+    <!-- Legacy Ripple Support -->
+    <style name="RippleWhite">
+        <item name="android:colorControlHighlight">?attr/colorOnPrimary</item>
+        <item name="android:background">?attr/selectableItemBackgroundBorderless</item>
+    </style>
+
+    <!-- Dialog Animation -->
     <style name="DialogAnimFadeInFadeOut" parent="android:Animation">
         <item name="android:windowEnterAnimation">@anim/anim_fade_in</item>
         <item name="android:windowExitAnimation">@anim/anim_fade_out</item>
     </style>
+    
+    <!-- Toolbar Theme for explicit icon coloring -->
+    <style name="ToolbarTheme" parent="ThemeOverlay.Material3.ActionBar">
+        <item name="colorControlNormal">?attr/colorOnSurface</item>
+        <item name="android:textColorPrimary">?attr/colorOnSurface</item>
+        <item name="android:textColorSecondary">?attr/colorOnSurfaceVariant</item>
+        <item name="android:textColorHint">?attr/colorOnSurfaceVariant</item>
+    </style>
 
-    <!-- https://stackoverflow.com/questions/26346727/android-material-design-button-styles-->
-    <!-- Button -->
-    <style name="AppTheme.Button" parent="Widget.AppCompat.Button.Colored">
-        <item name="colorButtonNormal">@color/colorAccent</item>
+    <!-- Custom Snackbar Style with explicit colors -->
+    <style name="Widget.App.Snackbar" parent="Widget.Material3.Snackbar">
+        <item name="android:background">#FF333333</item>
+        <item name="backgroundTint">@null</item>
+        <item name="android:backgroundTint">@null</item>
+        <item name="android:textColor">#FFFFFFFF</item>
     </style>
 
 </resources>
